CALL usp_CreateTable('tblTimeZones');
CALL usp_CreateTable('tblCurrencies');
CALL usp_CreateTable('tblCountries');
CALL usp_CreateTable('tblStates');
CALL usp_CreateTable('tblUsers');
CALL usp_CreateTable('tblUserProfiles');
CALL usp_CreateTable('tblOtp');
CALL usp_CreateTable('tblPasswordLogs');
CALL usp_CreateTable('tblLanguages');
CALL usp_CreateTable('tblCultures');
CALL usp_CreateTable('tblRoles');
CALL usp_CreateTable('tblPermissions');
CALL usp_CreateTable('tblRolePermissions');
CALL usp_CreateTable('tblVendors');
CALL usp_CreateTable('tblVendorLogins');
CALL usp_CreateTable('tblAdminUsers');