Table tblUsers {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  firstname VARCHAR(128) [not null]
  lastname VARCHAR(128) [not null]
  email VARCHAR(255) [unique, not null]
  password VARCHAR(1024)
  is_2fa_enabled BOOLEAN [not null, default: 0]
  login_token VARCHAR(255)
  password_updated_at TIMESTAMP
  accepted_tnc BOOLEAN [not null]
  accepted_pp BOOLEAN [not null]
  role_id BIGINT [not null]
  auth_provider TINYINT [not null, default: 1]
  auth_provider_user_id VARCHAR(1024)
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]

  Indexes {
    email
  }
}

Table tblUserProfiles {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  phone_code VARCHAR(8) [not null]
  phone_number VARCHAR(15) [not null]
  gender TINYINT [not null]
  date_of_birth DATE [not null]
  address_line1 VARCHAR(255) [not null]
  address_line2 VARCHAR(255)
  region_id BIGINT [not null]
  country_id BIGINT [not null]
  city VARCHAR(255) [not null]
  postal_code VARCHAR(20) [not null]
  avatar_url VARCHAR(512)
  user_id BIGINT [unique, not null]
  culture_id BIGINT [not null, default: 1]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
  created_by BIGINT
  updated_by BIGINT
}

Table tblCountries {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  iso2_code CHAR(2) [unique, not null]
  iso3_code CHAR(3) [unique, not null]
  numeric_code CHAR(3) [unique, not null]
  name VARCHAR(100) [unique, not null, note: 'CHECK: CHAR_LENGTH(name) > 0']
  official_name VARCHAR(150) [note: 'CHECK: `official_name` IS NULL OR CHAR_LENGTH(`official_name`) > 0']
  capital VARCHAR(100) [note: 'CHECK: `capital` IS NULL OR CHAR_LENGTH(`capital`) > 0']
  phone_code VARCHAR(50)
  currency_id BIGINT
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblStates {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  name VARCHAR(255) [not null]
  official_name VARCHAR(150)
  iso_code VARCHAR(10) [not null]
  capital VARCHAR(100)
  timezone_id BIGINT [not null]
  phone_code VARCHAR(10)
  country_id BIGINT [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]

  Indexes {
    (country_id, iso_code) [unique]
    (country_id, name) [unique]
  }
}

Table tblTimeZones {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  name VARCHAR(100) [unique, not null]
  abbreviation VARCHAR(10)
  utc_offset_minutes SMALLINT [not null, note: 'CHECK: `utc_offset_minutes` BETWEEN -720 AND 840']
  observes_dst BOOLEAN [not null, default: 0]
  current_offset_minutes SMALLINT [not null, note: 'CHECK: `current_offset_minutes` BETWEEN -720 AND 840']
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblCurrencies {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  iso_code CHAR(3) [unique, not null, note: 'CHECK: CHAR_LENGTH(iso_code) = 3']
  numeric_code CHAR(3) [unique]
  name VARCHAR(100) [unique, not null]
  symbol VARCHAR(10) [not null]
  minor_unit TINYINT [not null, default: 2]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblOtp {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  recipient_id BIGINT
  value VARCHAR(255) [not null]
  recipient VARCHAR(255) [not null]
  type TINYINT [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblCultures {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  iso_code VARCHAR(5) [unique, not null]
  rtl BOOLEAN [default: 0]
  language_id BIGINT [not null]
  country_id BIGINT [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblLanguages {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  name VARCHAR(50) [unique, not null]
  native_name VARCHAR(50) [unique, not null]
  iso_code VARCHAR(5) [unique, not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblPasswordLogs {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  password VARCHAR(255) [not null]
  user_id BIGINT [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
  created_by BIGINT [not null]
  updated_by BIGINT
}

Table tblRoles {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  name VARCHAR(128) [not null]
  description VARCHAR(255) [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblPermissions {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  name VARCHAR(128) [not null]
  description VARCHAR(255) [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]
}

Table tblRolePermissions {
  id BIGINT [pk, increment]
  internal_id BINARY(16) [unique, not null]
  role_id BIGINT [not null]
  permission_id BIGINT [not null]
  void BOOLEAN [default: 0]
  created_at TIMESTAMP [default: `now()`]
  updated_at TIMESTAMP [default: `now()`]

  Indexes {
    (role_id, permission_id) [unique]
  }
}

Ref: tblUsers.role_id > tblRoles.id
Ref: tblUserProfiles.user_id > tblUsers.id
Ref: tblUserProfiles.country_id > tblCountries.id
Ref: tblUserProfiles.region_id > tblStates.id
Ref: tblUserProfiles.culture_id > tblCultures.id
Ref: tblCountries.currency_id > tblCurrencies.id
Ref: tblStates.country_id > tblCountries.id
Ref: tblStates.timezone_id > tblTimeZones.id
Ref: tblOtp.recipient_id > tblUsers.id
Ref: tblCultures.language_id > tblLanguages.id
Ref: tblCultures.country_id > tblCountries.id
Ref: tblPasswordLogs.user_id > tblUsers.id
Ref: tblRolePermissions.role_id > tblRoles.id
Ref: tblRolePermissions.permission_id > tblPermissions.id